Change Date format

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,9 @@ spring.datasource.username=root
 spring.datasource.password=224486
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
+# Needed to initialize Metadata tables in the DB
 spring.batch.jdbc.initialize-schema=always
+# Disable option to start batch processing when spring boot application starts
 spring.batch.job.enabled=false
